hw06/test/zm-hw6-classFun-override-MismatchParam-class3-float.fmj
public int main() { }

public class C0  {
    public class C0 id(class C0 a){
        return new C0();
    }
}

public class C1 extends C0{
    public class C0 id(float a){ // error
        return new C0();
    }
}
